--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -32727,6 +32727,116 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Setup.Legends.LegendGoblin.RegisterLegends
   nameWithType: LegendGoblin.RegisterLegends
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan
+  name: LegendIllidan
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html
+  commentId: T:WarcraftLegacies.Source.Setup.Legends.LegendIllidan
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan
+  nameWithType: LegendIllidan
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.#ctor
+  name: LegendIllidan()
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan__ctor
+  commentId: M:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.#ctor
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.LegendIllidan()
+  nameWithType: LegendIllidan.LegendIllidan()
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.#ctor*
+  name: LegendIllidan
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.LegendIllidan
+  nameWithType: LegendIllidan.LegendIllidan
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Akama
+  name: Akama
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Akama
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Akama
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Akama
+  nameWithType: LegendIllidan.Akama
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Akama*
+  name: Akama
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Akama_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Akama
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Akama
+  nameWithType: LegendIllidan.Akama
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Altruis
+  name: Altruis
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Altruis
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Altruis
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Altruis
+  nameWithType: LegendIllidan.Altruis
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Altruis*
+  name: Altruis
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Altruis_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Altruis
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Altruis
+  nameWithType: LegendIllidan.Altruis
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Azshara
+  name: Azshara
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Azshara
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Azshara
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Azshara
+  nameWithType: LegendIllidan.Azshara
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Azshara*
+  name: Azshara
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Azshara_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Azshara
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Azshara
+  nameWithType: LegendIllidan.Azshara
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Illidan
+  name: Illidan
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Illidan
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Illidan
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Illidan
+  nameWithType: LegendIllidan.Illidan
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Illidan*
+  name: Illidan
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Illidan_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Illidan
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Illidan
+  nameWithType: LegendIllidan.Illidan
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Najentus
+  name: Najentus
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Najentus
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Najentus
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Najentus
+  nameWithType: LegendIllidan.Najentus
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Najentus*
+  name: Najentus
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Najentus_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Najentus
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Najentus
+  nameWithType: LegendIllidan.Najentus
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.RegisterLegends
+  name: RegisterLegends()
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_RegisterLegends
+  commentId: M:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.RegisterLegends
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.RegisterLegends()
+  nameWithType: LegendIllidan.RegisterLegends()
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.RegisterLegends*
+  name: RegisterLegends
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_RegisterLegends_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.RegisterLegends
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.RegisterLegends
+  nameWithType: LegendIllidan.RegisterLegends
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Vashj
+  name: Vashj
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Vashj
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Vashj
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Vashj
+  nameWithType: LegendIllidan.Vashj
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Vashj*
+  name: Vashj
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html#WarcraftLegacies_Source_Setup_Legends_LegendIllidan_Vashj_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Vashj
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendIllidan.Vashj
+  nameWithType: LegendIllidan.Vashj
 - uid: WarcraftLegacies.Source.Setup.Legends.LegendIronforge
   name: LegendIronforge
   href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendIronforge.html
@@ -33167,116 +33277,6 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Setup.Legends.LegendLordaeron.Uther
   nameWithType: LegendLordaeron.Uther
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga
-  name: LegendNaga
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html
-  commentId: T:WarcraftLegacies.Source.Setup.Legends.LegendNaga
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga
-  nameWithType: LegendNaga
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.#ctor
-  name: LegendNaga()
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga__ctor
-  commentId: M:WarcraftLegacies.Source.Setup.Legends.LegendNaga.#ctor
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.LegendNaga()
-  nameWithType: LegendNaga.LegendNaga()
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.#ctor*
-  name: LegendNaga
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga__ctor_
-  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendNaga.#ctor
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.LegendNaga
-  nameWithType: LegendNaga.LegendNaga
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Akama
-  name: Akama
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Akama
-  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Akama
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Akama
-  nameWithType: LegendNaga.Akama
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Akama*
-  name: Akama
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Akama_
-  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Akama
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Akama
-  nameWithType: LegendNaga.Akama
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Altruis
-  name: Altruis
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Altruis
-  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Altruis
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Altruis
-  nameWithType: LegendNaga.Altruis
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Altruis*
-  name: Altruis
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Altruis_
-  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Altruis
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Altruis
-  nameWithType: LegendNaga.Altruis
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Azshara
-  name: Azshara
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Azshara
-  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Azshara
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Azshara
-  nameWithType: LegendNaga.Azshara
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Azshara*
-  name: Azshara
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Azshara_
-  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Azshara
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Azshara
-  nameWithType: LegendNaga.Azshara
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Illidan
-  name: Illidan
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Illidan
-  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Illidan
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Illidan
-  nameWithType: LegendNaga.Illidan
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Illidan*
-  name: Illidan
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Illidan_
-  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Illidan
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Illidan
-  nameWithType: LegendNaga.Illidan
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Najentus
-  name: Najentus
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Najentus
-  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Najentus
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Najentus
-  nameWithType: LegendNaga.Najentus
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Najentus*
-  name: Najentus
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Najentus_
-  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Najentus
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Najentus
-  nameWithType: LegendNaga.Najentus
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.RegisterLegends
-  name: RegisterLegends()
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_RegisterLegends
-  commentId: M:WarcraftLegacies.Source.Setup.Legends.LegendNaga.RegisterLegends
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.RegisterLegends()
-  nameWithType: LegendNaga.RegisterLegends()
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.RegisterLegends*
-  name: RegisterLegends
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_RegisterLegends_
-  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendNaga.RegisterLegends
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.RegisterLegends
-  nameWithType: LegendNaga.RegisterLegends
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Vashj
-  name: Vashj
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Vashj
-  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Vashj
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Vashj
-  nameWithType: LegendNaga.Vashj
-- uid: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Vashj*
-  name: Vashj
-  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNaga.html#WarcraftLegacies_Source_Setup_Legends_LegendNaga_Vashj_
-  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendNaga.Vashj
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.Legends.LegendNaga.Vashj
-  nameWithType: LegendNaga.Vashj
 - uid: WarcraftLegacies.Source.Setup.Legends.LegendNeutral
   name: LegendNeutral
   href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendNeutral.html
